[package]
name = "stargrid"
version = "0.1.0"
edition = "2021"

[dependencies]
base64 = "0.21.7"
futures-util = "0.3.30"
iso8601-timestamp = "0.2.16"
log = "0.4.20"
primitive-types = "0.12.2"
regex = "1.10.3"
serde = { version = "1.0.195", features = ["derive"] }
serde_json = "1.0.111"
sha256 = "1.5.0"
simplelog = "0.12.1"
thiserror = "1.0.56"
tokio.features = ["full"]
tokio.version = "1.35.1"
tokio-tungstenite = { version = "0.21.0", features = ["rustls-tls-native-roots"] }
tungstenite = { version = "0.21.0", features = ["rustls-tls-native-roots"] }
